--- a/_posts/2019-08-22-GitHub.md
+++ b/_posts/2019-08-22-GitHub.md
@@ -1,12 +1,13 @@
 ---
 layout: post
 categories: posts
-title: About MarkDown
-subtitle: This is an article about Markdown.
+title: About GitHub
+subtitle: Basic knowledge about Github
 featured-image: /images/2019-8/Blog02.jpg
 tags: [markdown]
 date-string: August 22, 2019
 ---
+
 # About GitHub
 个人一直很喜欢使用github，这么一个开源及私有软件项目托管平台。即便如今我也有了自己的服务器，但是还是喜欢使用github这么一个免费的云仓库。
 
