--- a/_posts/2019-08-22-GitHub.md
+++ b/_posts/2019-08-22-GitHub.md
@@ -4,7 +4,7 @@ categories: posts
 title: About GitHub
 subtitle: Basic knowledge about Github
 featured-image: /images/2019-8/Blog02.jpg
-tags: [markdown]
+tags: [github]
 date-string: August 22, 2019
 ---
 
