--- a/_posts/2019-08-22-GitHub.md
+++ b/_posts/2019-08-22-GitHub.md
@@ -37,7 +37,7 @@ date-string: August 22, 2019
 
 <center>
 
-![Github](/images/2019-8-22/Blog05.png)
+![Github](/images/2019-8-22/Blog05.jpg)
 
 </center>
 
@@ -45,7 +45,7 @@ date-string: August 22, 2019
 
 <center>
 
-![Github](/images/2019-8-22/Blog06.png)
+![Github](/images/2019-8-22/Blog06.jpg)
 
 </center>
 
@@ -57,7 +57,7 @@ date-string: August 22, 2019
 
 <center>
 
-![Github](/images/2019-8-22/Blog07.png)
+![Github](/images/2019-8-22/Blog07.jpg)
 
 </center>
 
@@ -69,7 +69,7 @@ date-string: August 22, 2019
 
 <center>
 
-![Github](/images/2019-8-22/Blog11.png)
+![Github](/images/2019-8-22/Blog11.jpg)
 
 </center>
 
@@ -77,7 +77,7 @@ date-string: August 22, 2019
 
 <center>
 
-![Github](/images/2019-8-22/Blog08.png)
+![Github](/images/2019-8-22/Blog08.jpg)
 
 </center>
 
@@ -85,7 +85,7 @@ date-string: August 22, 2019
 
 <center>
 
-![Github](/images/2019-8-22/Blog09.png)
+![Github](/images/2019-8-22/Blog09.jpg)
 
 </center>
 
@@ -93,7 +93,7 @@ date-string: August 22, 2019
 
 <center>
 
-![Github](/images/2019-8-22/Blog10.png)
+![Github](/images/2019-8-22/Blog10.jpg)
 
 </center>
 
@@ -101,7 +101,7 @@ date-string: August 22, 2019
 
 <center>
 
-![Github](/images/2019-8-22/Blog07.png)
+![Github](/images/2019-8-22/Blog07.jpg)
 
 </center>
 
@@ -149,7 +149,7 @@ date-string: August 22, 2019
 
 <center>
 
-![Github](/images/2019-8-22/Blog12.png)
+![Github](/images/2019-8-22/Blog12.jpg)
 
 </center>
 
@@ -161,7 +161,7 @@ date-string: August 22, 2019
 
 <center>
 
-![Github](/images/2019-8-22/Blog13.png)
+![Github](/images/2019-8-22/Blog13.jpg)
 
 </center>
 
@@ -173,7 +173,7 @@ date-string: August 22, 2019
 
 <center>
 
-![Github](/images/2019-8-22/Blog14.png)
+![Github](/images/2019-8-22/Blog14.jpg)
 
 </center>
 
@@ -181,7 +181,7 @@ date-string: August 22, 2019
 
 <center>
 
-![Github](/images/2019-8-22/Blog15.png)
+![Github](/images/2019-8-22/Blog15.jpg)
 
 </center>
 
