--- a/_posts/2019-08-22-GitHub.md
+++ b/_posts/2019-08-22-GitHub.md
@@ -37,7 +37,7 @@ date-string: August 22, 2019
 
 <center>
 
-![Github](/images/2019-8-22/Blog05.jpg)
+![Github](https://ichtrafsie.github.io/images/2019-8-22/Blog05.jpg)
 
 </center>
 
@@ -45,7 +45,7 @@ date-string: August 22, 2019
 
 <center>
 
-![Github](/images/2019-8-22/Blog06.jpg)
+![Github](https://ichtrafsie.github.io/images/2019-8-22/Blog06.jpg)
 
 </center>
 
@@ -57,7 +57,7 @@ date-string: August 22, 2019
 
 <center>
 
-![Github](/images/2019-8-22/Blog07.jpg)
+![Github](https://ichtrafsie.github.io/images/2019-8-22/Blog07.jpg)
 
 </center>
 
@@ -68,32 +68,34 @@ date-string: August 22, 2019
 ### 创建
 
 <center>
-![Github](/images/2019-8-22/Blog11.jpg)
+
+![Github](https://ichtrafsie.github.io/images/2019-8-22/Blog11.jpg)
+
 </center>
 
 如果是第一次，那么我们就选择Create New Repository，然后选择我们本地的一个文件夹，而我使用的就是Blog文件夹，用来上传我的博客。接下来，我们来看下GUI的界面吧：
 
 <center>
-![Github](/images/2019-8-22/Blog08.jpg)
+![Github](https://ichtrafsie.github.io/images/2019-8-22/Blog08.jpg)
 </center>
 
 刚开始呢，左侧是没有内容的，现在的内容就是我写这篇博客的时候的变更，这块内容转到下面之后，等于是确定要修改之后，才可以上传。至于这块地方的操作，就需要使用到git bash工具了，点击Repository，选择git bash：
 
 <center>
-![Github](/images/2019-8-22/Blog09.jpg)
+![Github](https://ichtrafsie.github.io/images/2019-8-22/Blog09.jpg)
 </center>
 
 然后就会出现如下界面：
 
 <center>
-![Github](/images/2019-8-22/Blog10.jpg)
+![Github](https://ichtrafsie.github.io/images/2019-8-22/Blog10.jpg)
 </center>
 
 这时候显示的文件夹就是我们创建文件夹的地址，也是未来的我们的本地文件存放地址，而master表示我们使用的是主分支，分支的使用本章暂不介绍。然后我们回到先前打开的github创建界面。
 
 <center>
 
-![Github](/images/2019-8-22/Blog07.jpg)
+![Github](https://ichtrafsie.github.io/images/2019-8-22/Blog07.jpg)
 
 </center>
 
@@ -109,7 +111,7 @@ date-string: August 22, 2019
 
 <center>
 
-![Github](/images/2019-8-22/Blog03.jpg)
+![Github](https://ichtrafsie.github.io/images/2019-8-22/Blog03.jpg)
 
 </center>
 
@@ -141,7 +143,7 @@ date-string: August 22, 2019
 
 <center>
 
-![Github](/images/2019-8-22/Blog12.jpg)
+![Github](https://ichtrafsie.github.io/images/2019-8-22/Blog12.jpg)
 
 </center>
 
@@ -153,7 +155,7 @@ date-string: August 22, 2019
 
 <center>
 
-![Github](/images/2019-8-22/Blog13.jpg)
+![Github](https://ichtrafsie.github.io/images/2019-8-22/Blog13.jpg)
 
 </center>
 
@@ -165,7 +167,7 @@ date-string: August 22, 2019
 
 <center>
 
-![Github](/images/2019-8-22/Blog14.jpg)
+![Github](https://ichtrafsie.github.io/images/2019-8-22/Blog14.jpg)
 
 </center>
 
@@ -173,7 +175,7 @@ date-string: August 22, 2019
 
 <center>
 
-![Github](/images/2019-8-22/Blog15.jpg)
+![Github](https://ichtrafsie.github.io/images/2019-8-22/Blog15.jpg)
 
 </center>
 
