--- a/_posts/2019-08-22-GitHub.md
+++ b/_posts/2019-08-22-GitHub.md
@@ -35,7 +35,9 @@ date-string: August 22, 2019
 
 既然入了github，那么我们就可以创建我们自己的github仓库，点击右上角的添加按钮
 
+<center>
 ![Test](https://ichtrafsie.github.io/images/2019-8-22/Blog05.jpg)
+</center>
 
 然后页面就会跳转到创建页面
 
