--- a/_posts/2019-08-29-SSM整合.md
+++ b/_posts/2019-08-29-SSM整合.md
@@ -371,7 +371,7 @@ http://www.springframework.org/schema/tx/spring-tx-4.2.xsd">
 package cn.demo.backoffice.web.controller;
 
 import cn.demo.backoffice.model.Items;
-import cn.demo.backoffice.service.Impl.ItemsService;
+import cn.demo.backoffice.service.IItemsService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -383,7 +383,7 @@ import java.util.List;
 public class ItemsController {
 //由spring注入service
     @Autowired
-    private ItemsService itemsService;
+    private IItemsService itemsService;
 
     @RequestMapping("list")
     public String list() {
@@ -395,6 +395,8 @@ public class ItemsController {
     }
 }
 ```
+
+（补充：08-30修改事务的是否发现bug，无法自动代理，应为proxy）
 
 run一下tomcat，访问本地的/items/list.do
 
