--- a/_posts/2019-09-06-jdk1.8.md
+++ b/_posts/2019-09-06-jdk1.8.md
@@ -4,7 +4,7 @@ categories: posts
 title: About JDK1.8
 subtitle: 关于jdk1.8的新特性
 featured-image: /images/2019-8/Blog10.jpg
-tags: [jdk,test]
+tags: [jdk]
 date-string: September 06, 2019
 ---
 
