--- a/_posts/2019-09-06-jdk1.8.md
+++ b/_posts/2019-09-06-jdk1.8.md
@@ -66,7 +66,9 @@ List<java.lang.String> list = new ArrayList<>();
 
 # JDK1.8
 
-首先是Base64，在1.8之前编写这个功能都需要去调用第三方工具包，如今只需要import这个官方资源类就行。
+### Base64
+
+在1.8之前编写这个功能都需要去调用第三方工具包，如今只需要import这个官方资源类就行。
 
 ```
 public class Base64Demo {
@@ -85,3 +87,136 @@ public class Base64Demo {
 
 ![blog01](/images/2019-09-06/blog01.png)
 
+### 接口的默认方法和静态方法
+
+默认方法的接口在继承的时候，不强制要求实现类实现该默认方法，当然也可以对其进行继承和复写。
+
+```
+    private interface Default{
+        default String test() {
+            return "default class";
+        }
+    }
+
+    private static class DefaultImpl implements Default {
+    }
+
+    private static class OverDefaultImpl implements Default {
+        public String test() {
+            return "overDefault class";
+        }
+    }
+```
+
+### Data/Time API
+
+在JDK1.8之前，java的时间管理一直是很让人头疼的一件事，所以一般开发中都会导入第三方库Joda_Time,然而从JDK1.8开始，官方吸收了Joda_Time的设计，对java.time包进行优化，以Clock类和LocalDataTime类为例：
+
+```
+        Clock clock = Clock.systemUTC();
+        System.out.println(clock.instant());
+        System.out.println(clock.millis());
+
+
+        LocalDateTime dateTime = LocalDateTime.now();
+        LocalDateTime dateTimeFromClock = LocalDateTime.now(clock);
+        System.out.println(dateTime);
+        System.out.println(dateTimeFromClock);
+```
+
+结果为：
+
+![blog02](/images/2019-09-06/blog02.png)
+
+关于java.time,还有LocalTime，ZoneDataTime等类，可以去官方文档查看
+
+>https://docs.oracle.com/javase/8/docs/api/java/time/package-summary.html
+
+
+### Stream API
+
+新增的Stream API（java.util.stream）将生成环境的函数式编程引入了Java库中，以便开发者能够写出更加有效、更加简洁和紧凑的代码。
+
+以下面的Test为例：
+
+```
+public class StreamTest {
+    private enum Status {
+        OPEN, CLOSED
+    }
+
+    private static final class Task {
+        private final Status status;
+        private final Integer points;
+
+        Task(final Status status, final Integer points) {
+            this.status = status;
+            this.points = points;
+        }
+
+
+        public Integer getPoints() {
+            return points;
+        }
+
+        public Status getStatus() {
+            return status;
+        }
+
+        @Override
+        public String toString() {
+            return String.format("[%s, %d]", status, points);
+        }
+    }
+}
+```
+
+Task有两个状态，为Open或者Close，还有一个分数的概念，以下task集合为例：
+
+```
+        Collection<Task> tasks = Arrays.asList(
+                new Task(Status.OPEN, 10),
+                new Task(Status.OPEN, 20),
+                new Task(Status.CLOSED,1)
+        );
+```
+
+如果在1.8之前，需要统计tasks中为open状态的点，需要用到遍历集合，再统计结果输出，然而java8中只需要使用stream解决：
+
+```
+long totalPointsOfOpenTasks = tasks
+                    .stream()
+                    .filter(task -> task.getStatus() == Status.OPEN)
+                    .mapToInt(Task::getPoints)
+                    .sum();
+            System.out.println(totalPointsOfOpenTasks);
+```
+
+输出结果为：
+
+![blog03](/images/2019-09-06/blog03.png)
+
+在这段代码中，首先task.steam()将task转换成steam表示，在调用.filter过滤掉所有status不是open的task，然后获取其point并通过sum方法得到结果，最后打印。
+
+在其中，用到了不只是stream方法，还有 :: 关键词传递方法getPoints，以及Lombda表达式，由参数task+“ -> ”+ 语句块组成
+
+最简单的Lombda表示式，例如：
+
+```
+Arrays.asList( "a", "b", "d" ).forEach( e -> System.out.println( e ) );
+```
+可以将其运行得到以下结果：
+
+![blog04](/images/2019-09-06/blog04.png)
+
+除此之外，JDK1.8还有以下特性，在以后的开发过程中准备边学边用，可以参考官方文档进行了解
+
+    更好的类型推断
+    重复注解
+    Optional
+    Nashorn JavaScript引擎
+    并行数组
+
+Lambda表达式过两天用完了再整理，对于优化代码书写很有帮助。
+
+END
