--- a/_posts/2019-09-16-NameSilo.md
+++ b/_posts/2019-09-16-NameSilo.md
@@ -7,7 +7,7 @@ featured-image: /images/2019-8/Blog11.jpg
 tags: [namesilo,IP]
 date-string: September 16, 2019
 ---
-之前在Cloudcone上购买了一台服务器，给了我一串光秃秃的ip，不好记忆，也不美观，所以最近又去学习了下购买域名的事宜和使用。
+之前在Cloudcone上购买了一台服务器，给了我一串光秃秃的ip，不好记忆，也不美观，所以最近又去学习了下购买域名的事宜和使用。（虽然git是挺好，不过功能还是有限）
 
 # Namesilo
 
