--- a/_posts/2019-09-16-NameSilo.md
+++ b/_posts/2019-09-16-NameSilo.md
@@ -2,9 +2,9 @@
 layout: post
 categories: posts
 title: About Namesilo
-subtitle: 购买namesilo低价域名并使用
+subtitle: 关于namesilo上域名的购买和解析
 featured-image: /images/2019-8/Blog11.jpg
-tags: [namesilo,IP]
+tags: [jnamesilo,ip]
 date-string: September 16, 2019
 ---
 
