--- a/_posts/2019-09-16-NameSilo.md
+++ b/_posts/2019-09-16-NameSilo.md
@@ -4,7 +4,7 @@ categories: posts
 title: About Namesilo
 subtitle: 关于namesilo上域名的购买和解析
 featured-image: /images/2019-8/Blog11.jpg
-tags: [jnamesilo,ip]
+tags: [namesilo,ip]
 date-string: September 15, 2019
 ---
 
